# rust_template

./: .gitattributes  CITATION.cff  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-cd.yml  rust-ci.yml  rust.yml
src/: main.rs
template/src/: main.rs  math.rs
tests/: test.rs
