[package]
name = "template"
version = "0.1.0"
authors = ["Micha Birklbauer <micha.birklbauer@gmail.com"]
edition = "2021"
description = "A template rust project that adds two numbers."
readme = "README.md"
repository = "https://github.com/michabirklbauer/rust_template"
license = "MIT"
keywords = ["template"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
